--- a/htmls/styles/forms.css
+++ b/htmls/styles/forms.css
@@ -8,7 +8,109 @@ input{
 	font-size:14px;
 	font-family:Georgia, "Times New Roman", Times, serif;
 	}
+
+label{
+	display:inline-block;
+	width: 25%;
+	text-align: right;
+	}
+
+fieldset {
+	padding:30px;
+	border: none;
+	box-shadow: 0px 0px 2px 3px rgba(122,153,26, 0.1);
+}
+
+legend {
+	padding:7px;
+	background-color: #fff;
+	color: #555555;
+	box-shadow: 0px 0px 2px 4px rgba(122,153,26, 0.1);
+	}
+
+/* ----------------------------------------------General-----------------------------------------*/
+.forms {
+	margin: 25px auto;
+	background: #fff;
+	padding: 20px 30px;
+	box-shadow: 
+        0px 0px 0px 4px rgba(255,255,255,0.5 ), 
+        0px 4px 20px rgba( 0,0,0,0.4 );
+  	border-radius: 3px;
+}
+
+.titles h3 {
+    color: #555555;
+    font-size: 25px;
+    margin-top: 20px;
+	}
+
+.inputs #separator {
+	background-color: none;
+	color: #838080;
+	text-align: center;
+	}
+
+.inputs label {
+	display: inline-block;
+	width: 25%;
+	text-align: right;
+	padding: 5px;
+	}
+
+.inputs input[type=text], input[type=password],textarea{
+	width: 93%;
+    background: #f6f6f6;
+    color: #555555;
+    padding: 12px 12px;
+    border-radius: 3px;
+   	box-shadow: inset 0px 2px 2px rgba( 0,0,0,0.1 );
+   	margin-top: 10px;
+   	margin-bottom: 10px;
+   	outline:0;
+    border:0;
+    clear:both;
+	}
+
+.inputs input[type=text]:focus, input[type=password]:focus, textarea:focus  {
+    background: #fff;
+    box-shadow: 0px 0px 1px 3px rgba(122,153,26, 0.4);
+	}
+
+input[type="file"] {
+	width:100%;
+	box-shadow: 0px 0px 2px 4px rgba(122,153,26, 0.1);
+	outline:none;
+	}
+
+.submit {
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 50px;
+	}	
+
+.submit a:link, a:visited {
+	width: 45%;
+	padding: 5px;
+	display: block;
+	float: left;
+	margin-right: 4px;
+	color: #B0ABAB;
+    background-color: #333333;
+    text-align: center;
+    border-radius: 3px;
+    text-decoration: none;
+	}
+
+.submit a:hover {
+	background-color: #7A991A;	
+	color:#333333;
+	}
 	
+.submit a:active {
+	background-color: #ABDA0F;
+	}	
+
 /* ----------------------------------------------Search Form-------------------------------------*/
 
 #search{
@@ -37,3 +139,49 @@ input{
 	cursor:pointer;
 	background:none;
 	}
+
+
+/* ----------------------------------------------Search Form-------------------------------------*/
+#project {
+	width:700px;
+	margin: auto;
+	}
+
+#companyDetails {
+	width: 40%;
+	margin: auto;
+}
+
+#projectDetails {
+	width: 40%;
+	margin: auto;
+}
+
+/* ---------------------------------------------- Login form------------------------------------*/
+#login {
+	width:300px;
+	}
+
+#subPro {
+	width: 65%;
+	clear:both;
+	}
+
+.leftPart{
+	width:40%;
+	height:330px;
+	}	
+
+.rightPart{
+	width:40%;
+	height:330px;
+	}
+
+.sep {
+	padding:10px;
+	width:100%;
+	clear:both;
+	}
+#subBtn {
+	width: 45%;
+}
