--- a/htmls/styles/layout.css
+++ b/htmls/styles/layout.css
@@ -1,5 +1,5 @@
 @import url(forms.css);
-@import url(login.css);
+@import url(dashboard.css);
 /*------------------------------------------------- Initial setup---------------------------------*/
 body{margin:0; padding:0; font-size:13px; color: black; font-family:Georgia, "Times New Roman", Times, serif; background-color: #E6E6E6; }
 a { outline:none; text-decoration:none;}
@@ -10,17 +10,20 @@ img {margin:0; padding:0; border:none; width:100%; height:100%;}
 .justify {text-align: justify;}
 .to_left{float:left;}
 .to_right{float:right;}
-.shadow{ box-shadow: 0px 0px 10px #888888; background-color:white;}
+
+.shadow{ box-shadow: 0px 0px 10px 3px #888888; background-color:white;}
 .button {
 	margin: 0;
 	display: block;
 	}
+	
 .button ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
 	}
+
 .button li {
 	float: left;
 	padding: 2px;
