--- a/htmls/styles/dashboard.css
+++ b/htmls/styles/dashboard.css
@@ -24,10 +24,45 @@
 #container {
 	margin:auto;
 	width:70%;
-	padding: 10px;
-	background-color: white;
-	min-height: 350px;
-		border-radius: 4px;
+	padding: 5px;
+	min-height: 500px;
+	border-radius: 5px;
+	background-color:#BAFFBA;
+}
+
+#container h3{
+	color:black;
+	font-size:20pt;
+	width:100%;
+	text-align:center;
+	border-radius: 100px;
+	background-color:#AAFFAA;
+}
+
+#container a
+{
+	border-radius: 20px;
+	padding:5px;
+	background-color:#30BACC;
+	color:#000;
+	border:2px solid #BB0000;
+	font-size:14pt;
+}
+
+#container #search_date{
+	padding
+}
+
+#container input{
+	width:50px;
+}
+
+#container a:hover{
+	background-color:#7A991A;
+}
+
+#container #action_to_info{
+	top:500px;
 }
 
 div.content {
