update the button position

--- a/htmls/styles/dashboard.css
+++ b/htmls/styles/dashboard.css
@@ -61,8 +61,8 @@
 	background-color:#7A991A;
 }
 
-#container #action_to_info{
-	top:500px;
+#container #action_to_info {
+	width:150px;
 }
 
 div.content {
