adding styles to dashboards

--- a/htmls/styles/dashboard.css
+++ b/htmls/styles/dashboard.css
@@ -2,93 +2,113 @@
 	padding:0;
 	margin:0;
 	width:14%;
-	background-color: #ABDA0F;
-}	
+	}		
 
 #tabs, #cart {
-	padding:0;
-	width:100%;
-}
+	padding:5px;
+	width:92%;
+	}
 
 #tabs a, #cart a {
-	width:200px;
-	padding:20px;
+	width:125px;
+	padding:15px;
+	text-align: center;
 	clear:both;
-}
-
-#tabs #in_focus{
-	color:#000;
-    background-color: #7A991A;
-}
+	}
 
 #container {
 	margin:auto;
 	width:70%;
-	padding: 5px;
-	min-height: 500px;
-	border-radius: 5px;
-	background-color:#BAFFBA;
-}
-
-#container h3{
-	color:black;
-	font-size:20pt;
-	width:100%;
-	text-align:center;
-	border-radius: 100px;
-	background-color:#AAFFAA;
-}
-
-#container a
-{
-	border-radius: 20px;
-	padding:5px;
-	background-color:#30BACC;
-	color:#000;
-	border:2px solid #BB0000;
-	font-size:14pt;
-}
-
-#container #action_to_project{
-	top:-50px;
-}
-
-#container .project_list{
-	border-radius:8px;
-}
-
-#container #projectList{
-	font-size:30pt;
-	width:30%;
-}
-
-#container #show_specification{
-	font-size:10pt;
-	width:50%;
-	max-width:600px;
-}
-
-#container input{
-	width:250px;
-	font-size:20pt;
-	text-align:center;
-	border-radius: 50px;	
-}
-
-#container a:hover{
-	background-color:#7A991A;
-}
-
-#container #action_to_info {
-	width:150px;
-}
-
-#container #action_to_info a{
-	padding:15px;
-	border-radius: 5px;
-}
+	padding: 10px;
+	background-color: white;
+	min-height: 350px;
+	border-radius: 4px;
+	}
 
 div.content {
 	margin-top: 8px;
-}
+	}
 
+
+/******************************/
+
+#communication, #project_showing {
+	margin-bottom: 20px;
+	padding: 10px;
+	border-radius: 4px;
+	}
+
+#communication {
+	background-color: #424242;
+	}
+
+
+#project_showing {
+	background-color: #FAFAFA;
+	}
+
+/* ------- project_showing --------*/
+#search_date input {
+	width:100%;
+	}
+
+#search_date input {
+	border: none;
+	text-align: center;
+	height: 14px;
+	width:100px;
+	}
+
+#show_specification {
+	width:76%;
+	}
+
+
+#project_list {
+	width: 22%;
+	}
+
+#project_list select {
+	height: 250px;
+	width: 100%;
+	margin-top: 10px;
+	}
+
+/* -------------- communication --------------*/
+
+#action_to_message {
+	width: 14%;
+	padding: 5px;
+	}
+
+#action_to_message a{
+	padding:11px;
+	width: 80px;
+	}
+
+#message_box {
+	width: 83%;
+	}
+
+#message_box textarea {
+	margin-top: 30px;
+	width: 96%;
+	height: 75px;
+	}
+
+#message_box input {
+	display: block;
+	background-color: #DFDFDF;
+	border-radius: 3px;
+	border: none;
+	width: 48%;
+	padding: 3px;
+	}
+
+/*----------------------- Process projects in cart ---------------*/
+#edit_specification {
+	width:100%;;
+	}
+#edit_specification textarea{
+	height:300px;
+	}
